AC_PREREQ(2.50)
AC_INIT(shell)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(rhythmbox, 0.4.1.99)

AM_MAINTAINER_MODE

AC_PROG_INTLTOOL

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AM_PROG_LIBTOOL

GNOME_COMPILE_WARNINGS(error)

MONKEYMEDIA_REQUIRED=0.6.1

AC_SUBST(MONKEYMEDIA_REQUIRED)

PKG_CHECK_MODULES(RHYTHMBOX,                    \
                  gtk+-2.0                      \
                  libgnomeui-2.0                \
		  libglade-2.0                  \
		  gnome-vfs-2.0                 \
		  libbonobo-2.0			\
		  bonobo-activation-2.0		\
		  monkey-media >= $MONKEYMEDIA_REQUIRED)

AC_ARG_ENABLE(gstreamer,
[	--disable-gstreamer	Disable use of gstreamer, use xine instead],
use_xine=yes, use_xine=no)

if test x$use_xine = "xyes"; then
	PKG_CHECK_MODULES(XINE, libxine >= 1.0.0)
	PKG_CHECK_MODULES(VFS, libxine >= 1.0.0 gnome-vfs-2.0)
	AC_SUBST(VFS_CFLAGS)
	AC_SUBST(VFS_LIBS)
	RHYTHMBOX_CFLAGS="$RHYTHMBOX_CFLAGS $XINE_CFLAGS -DUSE_XINE"
	RHYTHMBOX_LIBS="$RHYTHMBOX_LIBS $XINE_LIBS"
fi

AC_CHECK_LIB(lirc_client, lirc_init,
		[ AC_CHECK_HEADER(lirc/lirc_client.h,
			[ RHYTHMBOX_LIBS="$RHYTHMBOX_LIBS -llirc_client"
			AC_DEFINE(HAVE_REMOTE)]
			,,) ] ,)

AC_SUBST(RHYTHMBOX_CFLAGS)
AC_SUBST(RHYTHMBOX_LIBS)

ALL_LINGUAS="cs da de el es fr it ja ko lv ms no sv tr ru vi"

GETTEXT_PACKAGE=rhythmbox
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")

AM_GLIB_GNU_GETTEXT

AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)

AC_PATH_PROG(GCONFTOOL, gconftool-2)

ORBIT_IDL="`$PKG_CONFIG --variable=orbit_idl ORBit-2.0`"
AC_SUBST(ORBIT_IDL)

LIBBONOBO_IDL="`$PKG_CONFIG --variable=idldir libbonobo-2.0`"
AC_SUBST(LIBBONOBO_IDL)

BONOBO_ACTIVATION_IDL="`$PKG_CONFIG --variable=idldir bonobo-activation-2.0`"
AC_SUBST(BONOBO_ACTIVATION_IDL)

AC_ARG_ENABLE(install_schemas,
	[  --disable-install-schemas        Disable installation of the gconf schemas])
AM_CONDITIONAL(INSTALL_SCHEMAS, test x$enable_install_schemas != xno)

if test x$enable_install_schemas != xno; then
	AM_GCONF_SOURCE_2
fi

dnl uninstalled share dir
AC_DEFINE_UNQUOTED(SHARE_UNINSTALLED_DIR,"`pwd`/data",[path to source data dir])
AC_SUBST(DATADIR_UNINST)

AC_OUTPUT([ 
Makefile
lib/Makefile
lib/widgets/Makefile
library/Makefile
iradio/Makefile
shell/Makefile
data/Makefile
data/ui/Makefile
data/art/Makefile
data/glade/Makefile
data/node-views/Makefile
xine-output/Makefile
views/Makefile
help/Makefile
help/C/Makefile
po/Makefile.in
rhythmbox.spec
])
