AC_PREREQ(2.54)
AC_INIT(shell)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(rhythmbox, 0.4.99)

AM_MAINTAINER_MODE

AC_PROG_INTLTOOL

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AM_PROG_LIBTOOL

if test x"$GCC" = "xyes"; then
AC_MSG_CHECKING([gcc argument to enable C99])
saved_CFLAGS="$CFLAGS"
CFLAGS="$CFLAGS -std=c99"
AC_COMPILE_IFELSE([
#include <stdio.h>
#include <unistd.h>

int main(int argc, char **argv) { printf("%s\n", __func__); exit(0); }
],[AC_MSG_RESULT([-std=c99])],[CFLAGS="$saved_CFLAGS"; AC_MSG_RESULT([C99 not available])])
fi

GNOME_COMPILE_WARNINGS(error)

MONKEYMEDIA_REQUIRED=0.6.1.99

AC_SUBST(MONKEYMEDIA_REQUIRED)

PKG_CHECK_MODULES(RHYTHMBOX,                    \
                  gtk+-2.0 >= 2.2.0             \
                  libgnomeui-2.0                \
		  libglade-2.0                  \
		  gnome-vfs-2.0                 \
		  libbonobo-2.0			\
		  bonobo-activation-2.0		\
		  monkey-media >= $MONKEYMEDIA_REQUIRED)

RHYTHMBOX_CFLAGS="$CFLAGS $RHYTHMBOX_CFLAGS"

dnl AC_CHECK_LIB(lirc_client, lirc_init,
dnl 		[ AC_CHECK_HEADER(lirc/lirc_client.h,
dnl 			[ RHYTHMBOX_LIBS="$RHYTHMBOX_LIBS -llirc_client"
dnl 			AC_DEFINE(HAVE_REMOTE)]
dnl 			,,) ] ,)

AC_SUBST(RHYTHMBOX_CFLAGS)
AC_SUBST(RHYTHMBOX_LIBS)

ALL_LINGUAS="am be cs da de el es fi fr it ja ko lv ms nl no pl pt pt_BR ru sv tr vi zh_TW"

GETTEXT_PACKAGE=rhythmbox
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")

AM_GLIB_GNU_GETTEXT

AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)

AC_PATH_PROG(GCONFTOOL, gconftool-2)

ORBIT_IDL="`$PKG_CONFIG --variable=orbit_idl ORBit-2.0`"
AC_SUBST(ORBIT_IDL)

LIBBONOBO_IDL="`$PKG_CONFIG --variable=idldir libbonobo-2.0`"
AC_SUBST(LIBBONOBO_IDL)

BONOBO_ACTIVATION_IDL="`$PKG_CONFIG --variable=idldir bonobo-activation-2.0`"
AC_SUBST(BONOBO_ACTIVATION_IDL)

AC_ARG_ENABLE(install_schemas,
	[  --disable-install-schemas        Disable installation of the gconf schemas])
AM_CONDITIONAL(INSTALL_SCHEMAS, test x$enable_install_schemas != xno)

if test x$enable_install_schemas != xno; then
	AM_GCONF_SOURCE_2
fi

dnl uninstalled share dir
AC_DEFINE_UNQUOTED(SHARE_UNINSTALLED_DIR,"`pwd`/data",[path to source data dir])
AC_SUBST(DATADIR_UNINST)

AC_OUTPUT([ 
Makefile
lib/Makefile
lib/widgets/Makefile
lib/egg/Makefile
library/Makefile
iradio/Makefile
shell/Makefile
data/Makefile
data/ui/Makefile
data/art/Makefile
data/glade/Makefile
data/node-views/Makefile
sources/Makefile
help/Makefile
help/C/Makefile
po/Makefile.in
rhythmbox.spec
])
